# Ferrum

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-COMPATIBILITY.md  Makefile  PERFORMANCE.md  README.md  SECURITY.md  deny.toml  install.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  conformance.yml  dependabot-smoke.yml  dependency-review.yml  e2e-real.yml  ghcr.yml  mii-conformance.yml  quality-gate.yml  release.yml  secret-scan.yml  security-audit.yml  security.yml
crates/ferrum-beacon/: Cargo.toml
crates/ferrum-beacon/src/: error.rs  handlers.rs  lib.rs  main.rs  repo.rs
crates/ferrum-beacon/src/query/: filters.rs  mod.rs  sanitize.rs
crates/ferrum-beacon/tests/: integration_beacon.rs
crates/ferrum-beacon/tests/fixtures/: datasets.json  genomic_variations.json  individuals.json
crates/ferrum-bench/: Cargo.toml
crates/ferrum-bench/benches/: crypt4gh_throughput.rs  drs_multipart_plan.rs
crates/ferrum-cohorts/: Cargo.toml
crates/ferrum-cohorts/src/: error.rs  handlers.rs  lib.rs  query.rs  repo.rs  state.rs  types.rs
crates/ferrum-core/: Cargo.toml  build.rs
crates/ferrum-core/migrations/: 20250101000001_initial.down.sql  20250101000001_initial.up.sql  20250101000002_drs_schema.down.sql  20250101000002_drs_schema.up.sql  20250101000003_wes_schema.down.sql  20250101000003_wes_schema.up.sql  20250101000004_tes_schema.down.sql  20250101000004_tes_schema.up.sql  20250101000005_trs_schema.down.sql  20250101000005_trs_schema.up.sql  20250101000006_beacon_schema.down.sql  20250101000006_beacon_schema.up.sql  20250101000007_passports_schema.down.sql  20250101000007_passports_schema.up.sql  20250101000008_provenance.down.sql  20250101000008_provenance.up.sql  20250101000009_metrics.down.sql  20250101000009_metrics.up.sql  20250101000010_cohorts.down.sql  20250101000010_cohorts.up.sql  20250101000011_security.down.sql  20250101000011_security.up.sql  20250101000012_drs_dataset_id.down.sql  20250101000012_drs_dataset_id.up.sql  20250101000014_workspaces.down.sql  20250101000014_workspaces.up.sql  20250101000015_checkpoints.down.sql  20250101000015_checkpoints.up.sql  20250224100000_drs_ingest_jobs.down.sql  20250224100000_drs_ingest_jobs.up.sql
crates/ferrum-core/src/: auth.rs  config.rs  db.rs  error.rs  health.rs  lib.rs  provenance.rs  security.rs  ssrf.rs  storage.rs  types.rs  workspace.rs
crates/ferrum-core/src/config/: watch.rs
crates/ferrum-core/src/io/: mod.rs  posix.rs
crates/ferrum-crypt4gh/: Cargo.toml
crates/ferrum-crypt4gh/benches/: header_rewrap.rs
crates/ferrum-crypt4gh/src/: encryption.rs  error.rs  keys.rs  lib.rs  main.rs  policy.rs  proxy.rs
crates/ferrum-crypt4gh/tests/: chunk_boundaries.rs  edit_list.rs  interop.rs  mac_validation.rs  rewrap.rs
crates/ferrum-crypt4gh/tests/fixtures/: python_encrypted.c4gh
crates/ferrum-crypt4gh/tests/keys/: python_ref_alice.pub  python_ref_alice.sec  python_ref_bob.pub  python_ref_bob.sec
crates/ferrum-drs/: Cargo.toml
crates/ferrum-drs/schema/: 001_drs.sql
crates/ferrum-drs/src/: access_url.rs  api_v1.rs  error.rs  handlers.rs  ingest.rs  lib.rs  main.rs  presign.rs  repo.rs  state.rs  types.rs  uri.rs
crates/ferrum-drs/tests/: access_url_get_access_regression.rs  self_uri.rs
crates/ferrum-gateway/: Cargo.toml
crates/ferrum-gateway/src/: admin.rs  lib.rs  main.rs  shutdown.rs
crates/ferrum-htsget/: Cargo.toml
crates/ferrum-htsget/src/: error.rs  handlers.rs  lib.rs  ticket.rs
crates/ferrum-mii-connect/: Cargo.toml
crates/ferrum-mii-connect/src/: lib.rs  sync.rs
crates/ferrum-mii-connect/tests/: golden_report.rs
crates/ferrum-mii-connect/tests/golden/: default17-report.golden.json
crates/ferrum-passports/: Cargo.toml
crates/ferrum-passports/src/: config.rs  error.rs  handlers.rs  keys.rs  lib.rs  main.rs  repo.rs  types.rs
crates/ferrum-security-tests/: Cargo.toml
crates/ferrum-security-tests/src/: lib.rs  ssrf.rs  validation.rs
crates/ferrum-storage/: Cargo.toml
crates/ferrum-storage/src/: lib.rs  local.rs  opendal_store.rs  parts.rs  s3.rs
crates/ferrum-tes/: Cargo.toml
crates/ferrum-tes/src/: error.rs  executor.rs  handlers.rs  lib.rs  main.rs  repo.rs  state.rs  types.rs
crates/ferrum-tes/src/executors/: docker.rs  mod.rs  noop.rs  podman.rs  slurm.rs  slurm_compat.rs
crates/ferrum-trs/: Cargo.toml
crates/ferrum-trs/src/: error.rs  handlers.rs  lib.rs  main.rs  repo.rs  types.rs
crates/ferrum-wes/: Cargo.toml
crates/ferrum-workspaces/: Cargo.toml
crates/ferrum-workspaces/src/: activity.rs  email.rs  error.rs  guard.rs  handlers.rs  lib.rs  repo.rs  state.rs  types.rs  validation.rs
demo/: docker-compose.demo.yml  start.sh  stop.sh
deploy/: .env.example  Dockerfile  Dockerfile.gateway  Dockerfile.init  docker-compose.yml  nginx-demo.conf
deploy/configs/: local.toml  production.toml
deploy/helm/: Chart.yaml  values-local.yaml  values-production.yaml  values.yaml
deploy/scripts/: align-helixtest-e2e-checksum.sh  ci-drs-microbench-stream.sh  docker-compose-build-retry.sh  init-demo.sh  patch-helixtest-skip-auth.sh
docs/: ARCHITECTURE.md  BUSINESS-MODEL.md  COMPLIANCE.md  CRYPT4GH.md  DEMO-WORKSPACES-TROUBLESHOOTING.md  GA4GH-LAB-KIT-SCOPE.md  GA4GH.md  HELIXTEST-INTEGRATION.md  HTSGET.md  INGEST-LAB-KIT.md  INSTALLATION.md  MII-CI-INTEGRATION.md  MII-CONNECT.md  MII-MODULE-MAPPING.md  PERFORMANCE-CRYPT4GH.md  PROVENANCE.md  README.md  STORAGE-BACKENDS.md  TES-DOCKER-BACKEND.md  WES-WORKFLOW-ENGINES.md  WORKFLOWS.md  drs-crypt4gh-routing.md
docs/deployment/: OFFLINE-AIRGAP.md  README.md  RELEASE-CHECKLIST.md  UPDATE-SOP.md
profiles/mii/: manifest.json  sync-spec.json
scripts/: demo_ingest_lab_kit.sh  deployment_preflight.sh  docs_consistency_check.sh  export_offline_bundle.sh  import_offline_bundle.sh
services/ui/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
tools/ferrum-cli/: Cargo.toml
tools/ferrum-cli/src/: main.rs
(+86 files in other folders)
