[workspace]
resolver = "2"
members = [
    "crates/ferrum-core",
    "crates/ferrum-drs",
    "crates/ferrum-trs",
    "crates/ferrum-wes",
    "crates/ferrum-tes",
    "crates/ferrum-passports",
    "crates/ferrum-crypt4gh",
    "crates/ferrum-beacon",
    "crates/ferrum-cohorts",
    "crates/ferrum-gateway",
    "crates/ferrum-workspaces",
    "crates/ferrum-security-tests",
    "crates/ferrum-htsget",
    "tools/ferrum-cli",
]

[workspace.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
