[package]
name = "ferrum-beacon"
version = "0.1.0"
edition = "2021"
description = "GA4GH Beacon v2 API"

[dependencies]
ferrum-core = { path = "../ferrum-core" }
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tower = "0.4"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
chrono = "0.4"
thiserror = "1"
anyhow = "1"

[[bin]]
name = "ferrum-beacon"
path = "src/main.rs"
required-features = ["standalone"]

[features]
default = []
standalone = ["tracing-subscriber"]
