[package]
name = "ferrum-beacon"
version = "0.1.0"
edition = "2021"
description = "GA4GH Beacon v2 API"
license = "BUSL-1.1"

[dependencies]
ferrum-core = { path = "../ferrum-core", default-features = false }
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tower = "0.5"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
chrono = "0.4"
thiserror = "2"
anyhow = "1"

[dev-dependencies]
http = "1"
tower = { version = "0.5", features = ["util"] }
hyper = "1"

[[bin]]
name = "ferrum-beacon"
path = "src/main.rs"
required-features = ["standalone"]

[features]
default = []
# Enable with `ferrum-core` libdeflate (faster BGZF when you add noodles-based readers here).
libdeflate = ["ferrum-core/libdeflate"]
standalone = ["tracing-subscriber"]
