[package]
name = "ferrum-cohorts"
version = "0.1.0"
edition = "2021"
description = "Cohort Browser: sample collections with phenotype, DRS, Beacon, WES"

[dependencies]
ferrum-core = { path = "../ferrum-core" }
axum = { version = "0.8", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tower = "0.4"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = "0.4"
ulid = "1"
thiserror = "1"
anyhow = "1"

[features]
default = []
