[package]
name = "ferrum-core"
version = "0.1.0"
edition = "2021"
description = "Shared types, errors, config, and database abstractions for Ferrum"

[features]
default = []
openapi = ["utoipa"]

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
config = "0.14"
utoipa = { version = "4", optional = true }
jsonwebtoken = "9"
async-trait = "0.1"
aws-config = "1"
aws-credential-types = "1"
aws-sdk-s3 = { version = "1.18", features = ["rt-tokio"] }
bytes = "1"
