[package]
name = "ferrum-crypt4gh"
version = "0.1.0"
edition = "2021"
description = "Crypt4GH encryption layer and DRS proxy"

[dependencies]
ferrum-core = { path = "../ferrum-core" }
ferrum-drs = { path = "../ferrum-drs" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-service = "0.3"
http-body-util = "0.1"
http = "1"
http-body = "1"
hyper = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
crypt4gh = "0.4"
async-trait = "0.1"
bytes = "1"
dashmap = "5"
futures-util = "0.3"
parking_lot = "0.12"
base64 = "0.22"
thiserror = "1"
anyhow = "1"

[[bin]]
name = "ferrum-crypt4gh"
path = "src/main.rs"
required-features = ["standalone"]

[features]
default = []
standalone = ["tracing-subscriber"]
