[package]
name = "ferrum-gateway"
version = "0.1.0"
edition = "2021"
description = "API Gateway routing to all GA4GH services"

[[bin]]
name = "ferrum-gateway"
path = "src/main.rs"

[dependencies]
ferrum-core = { path = "../ferrum-core" }
ferrum-drs = { path = "../ferrum-drs" }
ferrum-trs = { path = "../ferrum-trs" }
ferrum-wes = { path = "../ferrum-wes" }
ferrum-tes = { path = "../ferrum-tes" }
ferrum-passports = { path = "../ferrum-passports" }
ferrum-crypt4gh = { path = "../ferrum-crypt4gh" }
ferrum-beacon = { path = "../ferrum-beacon" }
ferrum-cohorts = { path = "../ferrum-cohorts" }
ferrum-workspaces = { path = "../ferrum-workspaces" }
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors", "fs", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

[features]
default = []
standalone = []
workspaces_email = ["ferrum-workspaces/email"]
