[package]
name = "ferrum-htsget"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrum-core = { path = "../ferrum-core" }
ferrum-drs = { path = "../ferrum-drs" }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "5" }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
percent-encoding = "2"
