[package]
name = "ferrum-passports"
version = "0.1.0"
edition = "2021"
description = "GA4GH Passports & Visas (AAI)"

[dependencies]
ferrum-core = { path = "../ferrum-core" }
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tower = "0.4"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
jsonwebtoken = "9"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
thiserror = "1"
tower-http = { version = "0.6", features = ["cors"] }
base64 = "0.22"
rand = "0.8"
urlencoding = "2"
rsa = { version = "0.9", features = ["pem"] }
pem = "2"
num-bigint-dig = "0.8"

[[bin]]
name = "ferrum-passports"
path = "src/main.rs"
required-features = ["standalone"]

[features]
default = []
standalone = ["tracing-subscriber"]
