[package]
name = "ferrum-storage"
version = "0.1.0"
edition = "2021"
description = "Object storage backends (local POSIX, S3) for Ferrum"
license = "BUSL-1.1"

[dependencies]
anyhow = "1"
ferrum-core = { path = "../ferrum-core" }
async-trait = "0.1"
aws-config = "1"
aws-credential-types = "1"
aws-sdk-s3 = { version = "1.18", features = ["rt-tokio"] }
bytes = "1"
tokio = { version = "1", features = ["full"] }
