[package]
name = "ferrum-tes"
version = "0.1.0"
edition = "2021"
description = "GA4GH Task Execution Service 1.1"
license = "BUSL-1.1"

[dependencies]
ferrum-core = { path = "../ferrum-core" }
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tower = "0.4"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = "0.4"
ulid = "1"
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
bollard = { version = "0.18", optional = true }
handlebars = "6"
libc = "0.2"

[features]
default = []
standalone = ["tracing-subscriber"]
docker = ["dep:bollard"]

[[bin]]
name = "ferrum-tes"
path = "src/main.rs"
required-features = ["standalone"]
