[package]
name = "ferrum-workspaces"
version = "0.1.0"
edition = "2021"
description = "Workspace and collaboration: named project containers with shared access control"

[dependencies]
ferrum-core = { path = "../ferrum-core" }
axum = { version = "0.7", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tower = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
ulid = "1"
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
rand = "0.8"
lettre = { version = "0.11", features = ["tokio1-native-tls"], optional = true }

[features]
default = []
email = ["lettre"]
