[package]
name = "ferrum-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for Ferrum management"

[[bin]]
name = "ferrum"
path = "src/main.rs"

[dependencies]
ferrum-core = { path = "../../crates/ferrum-core" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", features = ["json"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
